force-app/main/default/objects/Master_Configuration__c/Master_Configuration__c.object-meta.xml
<CustomObject>
    <label>Master Configuration</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Nombre de la configuración maestra</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuraciones maestras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>