force-app/main/default/objects/Master_Configuration__c/fields/Address_3__c.field-meta.xml
<CustomField>
    <fullName>Address_3__c</fullName>
    <label>Address 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>