force-app/main/default/objects/Master_Configuration__c/fields/Calendar_Activity__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Activity__c</fullName>
    <label>Actividad del calendario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>