force-app/main/default/objects/Master_Configuration__c/fields/Calendar_Activity_desc__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Activity_desc__c</fullName>
    <label>Calendario Actividad Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>