force-app/main/default/objects/Master_Configuration__c/fields/Calendar_Activity_duration__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Activity_duration__c</fullName>
    <label>Duración de la actividad del calendario</label>
    <length>5</length>
    <type>Text</type>
</CustomField>