force-app/main/default/objects/Master_Configuration__c/fields/Calendar_Activity_Duration_Type__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Activity_Duration_Type__c</fullName>
    <label>Calendario Actividad Duración Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>