force-app/main/default/objects/Master_Configuration__c/fields/Calendar_email_template__c.field-meta.xml
<CustomField>
    <fullName>Calendar_email_template__c</fullName>
    <label>Plantilla de correo electrónico de calen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Infusion day</fullName>
            </value>
            <value>
                <fullName>New case generated</fullName>
            </value>
            <value>
                <fullName>Pre infusion</fullName>
            </value>
            <value>
                <fullName>Post Infusion week1</fullName>
            </value>
            <value>
                <fullName>Post Infusion week2</fullName>
            </value>
            <value>
                <fullName>Post Infusion week3</fullName>
            </value>
            <value>
                <fullName>Post Infusion week4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>