force-app/main/default/objects/Master_Configuration__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>País</label>
    <length>20</length>
    <type>Text</type>
</CustomField>