force-app/main/default/objects/Master_Configuration__c/fields/End_Weight__c.field-meta.xml
<CustomField>
    <fullName>End_Weight__c</fullName>
    <label>End Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>