force-app/main/default/objects/Master_Configuration__c/fields/First_Notification__c.field-meta.xml
<CustomField>
    <fullName>First_Notification__c</fullName>
    <label>Primera Notificación</label>
    <length>30</length>
    <type>Text</type>
</CustomField>