force-app/main/default/objects/Master_Configuration__c/fields/Infusion_Center_Address__c.field-meta.xml
<CustomField>
    <fullName>Infusion_Center_Address__c</fullName>
    <label>Dirección del centro de infusión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>