force-app/main/default/objects/Master_Configuration__c/fields/Infusion_Center_Id__c.field-meta.xml
<CustomField>
    <fullName>Infusion_Center_Id__c</fullName>
    <label>Infusion Center Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>