force-app/main/default/objects/Master_Configuration__c/fields/Infusion_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Infusion_Center_Name__c</fullName>
    <label>Nombre del centro de infusión</label>
    <length>50</length>
    <type>Text</type>
</CustomField>