force-app/main/default/objects/Master_Configuration__c/fields/Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Institution_Name__c</fullName>
    <label>Nombre de la Institución</label>
    <length>50</length>
    <type>Text</type>
</CustomField>