force-app/main/default/objects/Master_Configuration__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>Enlace</label>
    <type>Url</type>
</CustomField>