force-app/main/default/objects/Master_Configuration__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>Código postal</label>
    <length>6</length>
    <type>Text</type>
</CustomField>