force-app/main/default/objects/Master_Configuration__c/fields/Second_Notification__c.field-meta.xml
<CustomField>
    <fullName>Second_Notification__c</fullName>
    <label>Segunda Notificación</label>
    <length>30</length>
    <type>Text</type>
</CustomField>