force-app/main/default/objects/Master_Configuration__c/fields/Spanish_Calendar_Activity__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Calendar_Activity__c</fullName>
    <label>Actividad Calendario Español</label>
    <length>50</length>
    <type>Text</type>
</CustomField>