force-app/main/default/objects/Master_Configuration__c/fields/Spanish_Calendar_Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Calendar_Activity_Description__c</fullName>
    <label>Descripción de la actividad del calendar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>