force-app/main/default/objects/Master_Configuration__c/fields/Start_Weight__c.field-meta.xml
<CustomField>
    <fullName>Start_Weight__c</fullName>
    <label>Start Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>