force-app/main/default/objects/Master_Configuration__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>Expresar</label>
    <length>30</length>
    <type>Text</type>
</CustomField>