force-app/main/default/objects/Master_Configuration__c/fields/Training_Name__c.field-meta.xml
<CustomField>
    <fullName>Training_Name__c</fullName>
    <label>Nombre de entrenamiento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>