force-app/main/default/objects/Master_Configuration__c/fields/Vial5_5__c.field-meta.xml
<CustomField>
    <fullName>Vial5_5__c</fullName>
    <label>Vial de 5,5 mLa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>