force-app/main/default/objects/Master_Configuration__c/fields/Vial8_3__c.field-meta.xml
<CustomField>
    <fullName>Vial8_3__c</fullName>
    <label>Vial de 8,3 mLb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>