force-app/main/default/objects/Master_Configuration__c/fields/Viales_Totales__c.field-meta.xml
<CustomField>
    <fullName>Viales_Totales__c</fullName>
    <label>Viales Totales por Kit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>