force-app/main/default/objects/Master_Configuration__c/fields/Weight_Range__c.field-meta.xml
<CustomField>
    <fullName>Weight_Range__c</fullName>
    <label>Peso del Paciente (kg)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>