force-app/main/default/objects/Master_Configuration__c/recordTypes/Calendar_Activities.recordType-meta.xml
<RecordType>
    <fullName>Calendar_Activities</fullName>
    <active>true</active>
    <label>Calendar Activities</label>
</RecordType>