force-app/main/default/objects/Master_Configuration__c/recordTypes/Infusion_Center_Master.recordType-meta.xml
<RecordType>
    <fullName>Infusion_Center_Master</fullName>
    <active>true</active>
    <label>Infusion Center Master</label>
</RecordType>