force-app/main/default/objects/Master_Configuration__c/recordTypes/Institution_Master.recordType-meta.xml
<RecordType>
    <fullName>Institution_Master</fullName>
    <active>true</active>
    <label>Institution Master</label>
</RecordType>