force-app/main/default/objects/Master_Configuration__c/recordTypes/ZKit.recordType-meta.xml
<RecordType>
    <fullName>ZKit</fullName>
    <active>true</active>
    <label>Z-Kit Calculator</label>
</RecordType>