force-app/main/default/objects/Master_Configuration__c/validationRules/Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Address</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Address_1__c )), NOT( REGEX( Address_1__c , &quot;^[a-zA-Z0-9- _%^&amp;()+=!~`,\&quot;.#*$?@.&amp;+-ñáéíóúü]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Address_1__c</errorDisplayField>
    <errorMessage>Enter Valid Address</errorMessage>
</ValidationRule>