force-app/main/default/objects/Master_Configuration__c/validationRules/Address_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_2</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Address_2__c )), NOT( REGEX( Address_2__c , &quot;^[a-zA-Z0-9- _%^&amp;()+=!~`,\&quot;.#*$?@.&amp;+-ñáéíóúü]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Address_2__c</errorDisplayField>
    <errorMessage>Enter a Valid Address</errorMessage>
</ValidationRule>