force-app/main/default/objects/Master_Configuration__c/validationRules/Address_3.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_3</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Address_3__c )), NOT( REGEX( Address_3__c , &quot;^[a-zA-Z0-9- _%^&amp;()+=!~`,\&quot;.#*$?@.&amp;+-ñáéíóúü]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Address_3__c</errorDisplayField>
    <errorMessage>Enter a Valid Address</errorMessage>
</ValidationRule>