force-app/main/default/objects/Master_Configuration__c/validationRules/Calendar_Activity.validationRule-meta.xml
<ValidationRule>
    <fullName>Calendar_Activity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Calendar_Activity__c )), NOT( REGEX( Calendar_Activity__c , &quot;[a-zA-Z0-9- À-ž]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Calendar_Activity__c</errorDisplayField>
    <errorMessage>Caracteres especiales no están permitidos</errorMessage>
</ValidationRule>