force-app/main/default/objects/Master_Configuration__c/validationRules/Calendar_Activity_Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Calendar_Activity_Duration</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Calendar_Activity_duration__c )), NOT( REGEX( Calendar_Activity_duration__c , &quot;[0-9- +=-]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Calendar_Activity_duration__c</errorDisplayField>
    <errorMessage>no se permiten letras ni caracteres especiales</errorMessage>
</ValidationRule>