force-app/main/default/objects/Master_Configuration__c/validationRules/City.validationRule-meta.xml
<ValidationRule>
    <fullName>City</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(City__c )), NOT( REGEX( City__c , &quot;[a-zA-Z- À-ž]*&quot;)))</errorConditionFormula>
    <errorDisplayField>City__c</errorDisplayField>
    <errorMessage>No se permiten caracteres especiales ni números.</errorMessage>
</ValidationRule>