force-app/main/default/objects/Master_Configuration__c/validationRules/Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Country</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Country__c)), NOT( REGEX( Country__c, &quot;[a-zA-Z- À-ž]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Country__c</errorDisplayField>
    <errorMessage>No se permiten caracteres especiales ni números.</errorMessage>
</ValidationRule>