force-app/main/default/objects/Master_Configuration__c/validationRules/Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Description</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Description__c )), NOT( REGEX( Description__c , &quot;^[a-zA-Z0-9- _%^&amp;()+=!~`,\&quot;.#*$?@.&amp;+-À-ž]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Enter a valid description</errorMessage>
</ValidationRule>