force-app/main/default/objects/Master_Configuration__c/validationRules/First_Notification.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Notification</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(First_Notification__c )), NOT( REGEX( First_Notification__c , &quot;[a-zA-Z0-9- À-ž]*&quot;)))</errorConditionFormula>
    <errorDisplayField>First_Notification__c</errorDisplayField>
    <errorMessage>Caracteres especiales no están permitidos</errorMessage>
</ValidationRule>