force-app/main/default/objects/Master_Configuration__c/validationRules/Infusion_Center_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Infusion_Center_Address</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Infusion_Center_Address__c )), NOT( REGEX( Infusion_Center_Address__c , &quot;[a-zA-Z0-9_%^&amp;()+=!~`,\&quot;.#*$?@.&amp;+-- À-ž]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Infusion_Center_Address__c</errorDisplayField>
    <errorMessage>Enter a vaild Address</errorMessage>
</ValidationRule>