force-app/main/default/objects/Master_Configuration__c/validationRules/Institution_Centre_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Institution_Centre_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Infusion_Center_Name__c )), NOT( REGEX( Infusion_Center_Name__c , &quot;[a-zA-Z- À-ž]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Infusion_Center_Name__c</errorDisplayField>
    <errorMessage>No se permiten números ni caracteres especiales</errorMessage>
</ValidationRule>