force-app/main/default/objects/Master_Configuration__c/validationRules/Institution_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>Institution_Id</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Institution_Id__c )), NOT( REGEX( Institution_Id__c , &quot;^[a-zA-Z0-9- _%^&amp;()+=!~`,\&quot;.#*$?@.&amp;+-ñáéíóúü]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Institution_Id__c</errorDisplayField>
    <errorMessage>Enter a valid Institution Id</errorMessage>
</ValidationRule>