force-app/main/default/objects/Master_Configuration__c/validationRules/Institution_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Institution_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Institution_Name__c )), NOT( REGEX( Institution_Name__c , &quot;[a-zA-Z- À-ž0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Institution_Name__c</errorDisplayField>
    <errorMessage>Caracteres especiales no están permitidos</errorMessage>
</ValidationRule>