force-app/main/default/objects/Master_Configuration__c/validationRules/PostalCode.validationRule-meta.xml
<ValidationRule>
    <fullName>PostalCode</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(PostalCode__c )), NOT( REGEX( PostalCode__c , &quot;[0-9- _]+&quot;)))</errorConditionFormula>
    <errorDisplayField>PostalCode__c</errorDisplayField>
    <errorMessage>Los caracteres especiales y el alfabeto no están permitidos.</errorMessage>
</ValidationRule>