force-app/main/default/objects/Master_Configuration__c/validationRules/Record_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Status</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Record_Status__c )), NOT( REGEX( Record_Status__c , &quot;^[a-zA-Z0-9- _%^&amp;()+=!~`,\&quot;.#*$?@.&amp;+-ñáéíóúü]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Record_Status__c</errorDisplayField>
    <errorMessage>Enter a valid Record Status</errorMessage>
</ValidationRule>