force-app/main/default/objects/Master_Configuration__c/validationRules/Second_Notification.validationRule-meta.xml
<ValidationRule>
    <fullName>Second_Notification</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Second_Notification__c )), NOT( REGEX( Second_Notification__c , &quot;[a-zA-Z0-9- À-ž]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Second_Notification__c</errorDisplayField>
    <errorMessage>Caracteres especiales no están permitidos</errorMessage>
</ValidationRule>