force-app/main/default/objects/Master_Configuration__c/validationRules/Spanish_Calendar_Activity_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Spanish_Calendar_Activity_Description</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Spanish_Calendar_Activity_Description__c )), NOT( REGEX( Spanish_Calendar_Activity_Description__c , &quot;[a-zA-Z0-9_%^&amp;()+=!~`,\&quot;.#*$?@.&amp;+-- À-ž]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Spanish_Calendar_Activity_Description__c</errorDisplayField>
    <errorMessage>Enter a valid Activity Description</errorMessage>
</ValidationRule>