force-app/main/default/objects/Master_Configuration__c/validationRules/State.validationRule-meta.xml
<ValidationRule>
    <fullName>State</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(State__c )), NOT( REGEX( State__c , &quot;[a-zA-Z- À-ž]*&quot;)))</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>No se permiten caracteres especiales ni números.</errorMessage>
</ValidationRule>