force-app/main/default/objects/Master_Configuration__c/validationRules/Street.validationRule-meta.xml
<ValidationRule>
    <fullName>Street</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Street__c )), NOT( REGEX( Street__c , &quot;[a-zA-Z- À-ž0-9,.]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Street__c</errorDisplayField>
    <errorMessage>Caracteres especiales no están permitidos</errorMessage>
</ValidationRule>