force-app/main/default/objects/Master_Configuration__c/validationRules/Traning_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Traning_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Training_Name__c )), NOT( REGEX( Training_Name__c , &quot;[a-zA-Z- À-ž]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Training_Name__c</errorDisplayField>
    <errorMessage>No se permiten números ni caracteres especiales</errorMessage>
</ValidationRule>