force-app/main/default/objects/Master_Configuration__c/validationRules/Weight_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_Range</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Weight_Range__c )), NOT( REGEX( Weight_Range__c , &quot;[a-zA-Z- À-ž0-9-.,]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Weight_Range__c</errorDisplayField>
    <errorMessage>No se permiten letras ni caracteres especiales</errorMessage>
</ValidationRule>