force-app/main/default/objects/Master_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>OBJECT_ID</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>Dosage__c</columns>
    <columns>End_Weight__c</columns>
    <columns>Link__c</columns>
    <columns>Start_Weight__c</columns>
    <columns>Type__c</columns>
    <columns>Training_Name__c</columns>
    <columns>Calendar_Activity__c</columns>
    <columns>Calendar_Activity_desc__c</columns>
    <columns>Calendar_Activity_duration__c</columns>
    <filterScope>Everything</filterScope>
    <label>todos</label>
</ListView>