force-app/main/default/objects/Master_Configuration__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>todos</label>
</ListView>