force-app/main/default/objects/Master_Configuration__c/listViews/Infusion_Centers.listView-meta.xml
<ListView>
    <fullName>Infusion_Centers</fullName>
    <columns>NAME</columns>
    <columns>Infusion_Center_Name__c</columns>
    <columns>Infusion_Center_Address__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Configuration__c.Infusion_Center_Master</value>
    </filters>
    <label>Maestro del Centro de Infusión</label>
</ListView>