force-app/main/default/objects/Master_Configuration__c/listViews/Institution_Master.listView-meta.xml
<ListView>
    <fullName>Institution_Master</fullName>
    <columns>NAME</columns>
    <columns>Institution_Name__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <columns>PostalCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Configuration__c.Institution_Master</value>
    </filters>
    <label>Maestría de la Institución</label>
</ListView>