force-app/main/default/objects/Master_Configuration__c/listViews/Training.listView-meta.xml
<ListView>
    <fullName>Training</fullName>
    <columns>NAME</columns>
    <columns>Training_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Configuration__c.Training</value>
    </filters>
    <label>Capacitación</label>
</ListView>