force-app/main/default/objects/Master_Configuration__c/listViews/ZKit_Records.listView-meta.xml
<ListView>
    <fullName>ZKit_Records</fullName>
    <columns>NAME</columns>
    <columns>Weight_Range__c</columns>
    <columns>Vial5_5__c</columns>
    <columns>Vial8_3__c</columns>
    <columns>Viales_Totales__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Configuration__c.ZKit</value>
    </filters>
    <label>Calculadora de kit Z</label>
</ListView>